--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -2,13 +2,32 @@ name: Run Cypress Tests
 
 on:
   schedule:
-    # Daily at 11:05 UTC (Approx 4:05 PM PKT)
-    - cron: '17 20 * * *'
+    # Daily at 34 11 UTC (Approx 3:34 AM PKT)
+    - cron: '34 11 * * *'
   workflow_dispatch: # Allows you to trigger this manually for testing
 
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
+    env:
+      CYPRESS_BASE_URL: http://127.0.0.1:3000
+      NODE_OPTIONS: "--openssl-legacy-provider"
+      tenantId: "20240809094032340xyo4ktshjhuqlxn"
+      userId: "d36072d8-8096-49dc-979d-edfd6df37355"
+      # React build-time env
+      CI: false
+      GENERATE_SOURCEMAP: false
+      REACT_APP_BACKEND_API: "https://dev-api.pretectum.io/"
+      REACT_APP_BUCKET_NAME: "pretectum-dev"
+      REACT_APP_BUCKET_REGION: "us-east-2"
+      REACT_APP_IDENTITY_POOL_ID: "us-east-2:4f8d7c88-8890-4de1-9c00-d9b635199ee8"
+      REACT_APP_WEB_SOCKET: "wss://bnnl437dqd.execute-api.us-east-2.amazonaws.com/dev"
+      REACT_APP_GMAPS_API_KEY: "SET"
+      REACT_APP_NOVU_APPLICATION_IDENTIFIER: "gBy6dc7D3weB"
+      SKIP_PREFLIGHT_CHECK: "true"
+      AMPLIFY_NATIVECLIENT_ID: "2bi4o2llifpcjnfpv0no1slj0k"
+      AMPLIFY_USERPOOL_ID: "us-east-2_C7Zl7OTI1"
+      AMPLIFY_WEBCLIENT_ID: "61junkfaas0egho45e9q71uljj"
 
     steps:
       # -----------------------------
@@ -26,16 +45,16 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm'
+          cache: 'npm'  # speeds up install
 
       # -----------------------------
       # Install dependencies
       # -----------------------------
       - name: Install Dependencies
-        run: npm ci
+        run: npm install
 
       # -----------------------------
-      # Build React App
+      # Build React App (fast + env injected)
       # -----------------------------
       - name: Build React App
         run: npm run build
@@ -43,17 +62,7 @@ jobs:
           CI: false
           NODE_OPTIONS: "--max-old-space-size=4096"
           GENERATE_SOURCEMAP: false
-          REACT_APP_BACKEND_API: "https://dev-api.pretectum.io/"
-          REACT_APP_BUCKET_NAME: "pretectum-dev"
-          REACT_APP_BUCKET_REGION: "us-east-2"
-          REACT_APP_IDENTITY_POOL_ID: "us-east-2:4f8d7c88-8890-4de1-9c00-d9b635199ee8"
-          REACT_APP_WEB_SOCKET: "wss://bnnl437dqd.execute-api.us-east-2.amazonaws.com/dev"
-          REACT_APP_GMAPS_API_KEY: "SET"
-          REACT_APP_NOVU_APPLICATION_IDENTIFIER: "gBy6dc7D3weB"
-          SKIP_PREFLIGHT_CHECK: "true"
-          AMPLIFY_NATIVECLIENT_ID: "2bi4o2llifpcjnfpv0no1slj0k"
-          AMPLIFY_USERPOOL_ID: "us-east-2_C7Zl7OTI1"
-          AMPLIFY_WEBCLIENT_ID: "61junkfaas0egho45e9q71uljj"
+          
 
       # -----------------------------
       # Run Cypress tests
@@ -66,12 +75,9 @@ jobs:
           wait-on-timeout: 180
           project: .
           browser: chrome
-          spec: src/cypress/e2e/18_Cypress_daily.cy.ts
-        env:
-          CYPRESS_BASE_URL: http://127.0.0.1:3000
-          NODE_OPTIONS: "--openssl-legacy-provider"
-          tenantId: "20240809094032340xyo4ktshjhuqlxn"
-          userId: "d36072d8-8096-49dc-979d-edfd6df37355"
+          spec: src/cypress/e2e/Daily_tests/Cypress_daily.cy.ts  # <- exact file path
+     
+        
 
       # -----------------------------
       # Upload artifacts if tests fail
